# sui-readable

./: Cargo.toml  README.md
src/: handlers.rs  main.rs  models.rs  sui_client.rs
static/: index.html
